# beer-stuff

./: README.md  pyproject.toml
data/: BeerStyleMinMaxMean.csv
notebooks/: water_science_week_plots.ipynb
