[tool.poetry]
name = "beer"
version = "0.1.0"
description = ""
authors = ["PattyC <patrickcoffey91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
plotly = "^5.15.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
